feat(server/friends): add friendship request creation endpoint. Resolves #70
